--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -23,7 +23,7 @@ eureka:
     # 定义实例ID格式
     instance-id: ${spring.application.name}:${spring.cloud.client.ip-address}:${server.port}
     # 点击Instance ID进行跳转的地址
-    status-page-url-path: /user/hello
+    status-page-url-path: /hello
     # 自定义元数据
     metadata-map:
       name: zhangsan
